# MessagePassing_for_GNNs

./: CMakeLists.txt  Compare_Predictions.ipynb  GCN_Model.h  README.md  Requirements.txt  arguments.py  data.h  get_karate_club.sh  layers.h  main.cpp  model.py  run.sh  train.py  utils.py
Cycles_Graph_Level_Classification/: Cycle_Compare_Predictions.ipynb  GCN_Model.h  README.md  Train_Cycles.py  arguments.py  data.h  layers.h  main.cpp  model.py  utils.py
Cycles_Graph_Level_Classification/resources/CYCLE/: CYCLE_A.txt  CYCLE_graph_indicator.txt  CYCLE_graph_labels.txt  CYCLE_node_labels.txt
Cycles_Graph_Level_Classification/resources/saved/: cpp_predicted_cycle.txt  py_predicted_cycle.txt  saved_weights_cycle.txt
resources/: README.ucidata-zachary
resources/saved/: cpp_predicted.txt  py_predicted.txt  saved_weights.txt
